# some-gl-sdl

./: .gitignore  Cargo.toml  README.md  build.rs  paths.sh  tmp
.cargo/: config.toml
borrow_test/: Cargo.toml
borrow_test/src/: main.rs
carp_sdl/: Cargo.toml  build.rs
carp_sdl/src/: fn_test.rs  main.rs
carp_sdl_parser/: Cargo.toml  classes.rs  combined.rs  defines.rs  enums.rs  funcs.rs  stripped_funcs.rs  structs.rs  typedefs.rs
carp_sdl_parser/src/: main.rs
carp_vk_parser/: Cargo.toml  commands.rs  vk_enums.rs  vk_handles.rs  vk_structs.rs
carp_vk_parser/src/: main.rs  main2.rs  test_vk.rs  vk_all.rs
carp_window/: Cargo.toml
carp_window/src/: linux_win.rs  main.rs  win32_win.rs
carp_window_test/: Cargo.toml
carp_window_test/src/: main.rs
compute/: Cargo.toml  build.rs
compute/src/: compute.comp  fullscreen_quad.frag  fullscreen_quad.vert  main.rs
dyn_func_test/: Cargo.toml
dyn_func_test/lib/base_lib/: Cargo.toml
dyn_func_test/lib/base_lib/src/: lib.rs
dyn_func_test/lib/caller_lib/: Cargo.toml
dyn_func_test/lib/caller_lib/src/: lib.rs
dyn_func_test/lib/foo_impl/src/: lib.rs
dyn_func_test/src/: main.rs
dyn_link_test/: Cargo.toml
dyn_link_test/lib/caller_lib/src/: lib.rs
dyn_link_test/lib/foo_impl/: Cargo.toml
lib/carp_lib_loader/: Cargo.toml
lib/carp_lib_loader/src/: lib.rs
lib/carp_window/: Cargo.toml
lib/carp_window/src/: lib.rs  linux_win.rs  win32_win.rs
lib/carp_xml_parser/: Cargo.toml
lib/carp_xml_parser/src/: lib.rs
lib/core/: Cargo.toml
lib/core/src/: lib.rs
lib/gl/: Cargo.toml
lib/gl/src/: lib.rs
lib/my_core/: Cargo.toml
lib/my_core/src/: lib.rs
lib/render_gl/: Cargo.toml
lib/render_gl/src/: lib.rs
lib/render_layer/: Cargo.toml
lib/render_layer/src/: lib.rs
lib/render_systems/: Cargo.toml
lib/render_systems/src/: fontsystem.rs  lib.rs  textured_triangle.frag  textured_triangle.vert
lib/sdl_window/: Cargo.toml
lib/sdl_window/src/: lib.rs
lib/sdl_window_state/: Cargo.toml
lib/sdl_window_state/src/: lib.rs
lib/window_state/: Cargo.toml
lib/window_state/src/: lib.rs
macrotest/: Cargo.toml
macrotest/src/: main.rs
paint/: Cargo.toml
paint/src/: main.rs  triangle.vert
rustris/: Cargo.toml
rustris/src/: main.rs  textured_triangle.frag  textured_triangle.vert  triangle.frag  triangle.vert
src/: main.rs  render_gl.rs  triangle.frag  triangle.vert
tetris/: Cargo.toml
tetris/src/: main.rs
text_test/: Cargo.toml
text_test/src/: ivy.bat  ivy.sh  main.rs
vulkan/: Cargo.toml
vulkan/src/: main.rs  triangle.vert  triangle_frag.spv  triangle_vert.spv
