[workspace]
members = [
	"rustris",
	"paint",
	"compute",
	"dyn_link_test",

	#"vulkan",
	"macrotest",
	"carp_sdl",
	"carp_sdl_parser"
]

[profile.dev]
codegen-units = 32
incremental = true
overflow-checks = true
debug-assertions = true
lto = false
debug = true
opt-level = 0
panic = "abort"
#linker-flavor = "ld64.lld"