[workspace]
members = [
    "rustris",
    #"paint",
    #"compute",
    #"dyn_func_test",

    #"vulkan",
    #"macrotest",
    #"carp_sdl",
    #"carp_sdl_parser",
    #"carp_vk_parser",
    #"text_test",
    #"borrow_test",
    #"carp_window_test",
]

[profile.dev]
codegen-units = 32
incremental = true
overflow-checks = true
debug-assertions = true
lto = false
debug = true
opt-level = 0
panic = "abort"
#linker-flavor = "ld64.lld"


[profile.release]
codegen-units = 1
#codegen-units = 32
#incremental = true
#overflow-checks = true
#debug-assertions = true
lto = true
#debug = true
opt-level = 's'
#panic = "abort"
