[package]
name = "dyn_func_test"
version = "0.1.0"
authors = ["Kiraffi <10407365+Kiraffi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foo_impl = { path = "lib/foo_impl" }
caller_lib = { path = "lib/caller_lib" }
