[package]
name = "macrotest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#winapi = { version = "0.3", default-features = false, features = ["libloaderapi", "errhandlingapi"] }

sdl2 = { version = "0.34.5", default-features = false }

carp_lib_loader = {path = "../lib/carp_lib_loader" }