[package]
name = "paint"
version = "0.1.0"
authors = ["Kiraffi <10407365+Kiraffi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "../lib/gl" } 
sdl2 = { version = "0.34.5", default-features = false }
render_gl = { path = "../lib/render_gl" }
my_core = { path = "../lib/my_core" }
sdl_window = { path = "../lib/sdl_window" }
window_state = { path = "../lib/window_state" }
