[package]
name = "rustris"
version = "0.1.0"
authors = ["Kiraffi <10407365+Kiraffi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "../lib/gl" } 
# gl = "0.14.0"
sdl2 = { version = "0.34.5", default-features = false }
render_gl = { path = "../lib/render_gl" }
core = { path = "../lib/core" }
render_systems = { path = "../lib/render_systems" }

