[package]
name = "rustris"
version = "0.1.0"
authors = ["Kiraffi <10407365+Kiraffi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "../lib/gl" } 
render_gl = { path = "../lib/render_gl" }
core = { path = "../lib/core" }
sdl_window = { path = "../lib/sdl_window" }
sdl_window_state = { path = "../lib/sdl_window_state" }
render_systems = { path = "../lib/render_systems" }

render_layer = { path = "../lib/render_layer" }


#glam = { version = "0.18.0", default-features = false, features = ["std"] }
#cgmath = { version = "0.18.0", default-features = false }

