[package]
name = "text_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[profile.release]
codegen-units = 32
incremental = true
overflow-checks = true
debug-assertions = true
lto = true
debug = true
opt-level = 3
panic = "abort"
